# fighter3d-googlecode

./: Config.h
CamFighter/: AUTHORS  Config.cpp  Config.h  Makefile  Makefile.am  configure.in  fighter  make_auto  make_debug  make_release
CamFighter/App Framework/: Application.cpp  Application.h  IScene.cpp  IScene.h  IWindow.cpp  IWindow.h  Scene.cpp  Scene.h  System.h  Window.cpp  Window.h  WindowProc.cpp  WindowProcL.cpp
CamFighter/AppFramework/: Application.cpp  Application.h  IScene.h  System.h
CamFighter/Core/: Makefile  core.h  fromstring.h  test.cpp.old  tostring.h  types.h
CamFighter/Data/: cameras.txt  cameras_auto.txt  cameras_michal.txt  cameras_static.txt  clouds.vert  comboard.txt  config.txt  keyboard.txt  keys.txt  maps.txt  players.txt  program.frag  program.vert  skeletal.frag  skeletal.vert
CamFighter/GLExtensions/: ARB_fragment_shader.cpp  ARB_fragment_shader.h  ARB_multitexture.cpp  ARB_multitexture.h  ARB_shader_objects.cpp  ARB_shader_objects.h  ARB_vertex_buffer_object.cpp  ARB_vertex_buffer_object.h  ARB_vertex_shader.cpp  ARB_vertex_shader.h  EXT_stencil_two_side.cpp  EXT_stencil_two_side.h  EXT_stencil_wrap.cpp  EXT_stencil_wrap.h  EXT_texture3D.cpp  EXT_texture3D.h  GLExtensions.cpp  GLExtensions.h  aGLExt_ARB_fragment_shader.cpp  aGLExt_ARB_fragment_shader.h  aGLExt_ARB_multitexture.cpp  aGLExt_ARB_multitexture.h  aGLExt_ARB_shader_objects.cpp  aGLExt_ARB_vertex_buffer_object.cpp  aGLExt_ARB_vertex_buffer_object.h  aGLExt_ARB_vertex_shader.cpp  aGLExt_ARB_vertex_shader.h  aGLExt_EXT_texture3D.cpp  aGLExt_EXT_texture3D.h  aGL_Extensions.cpp  aGL_Extensions.h
CamFighter/Graphics/: FontMgr.h  Renderer.h  ShadowVolume.cpp  ShadowVolume.h
CamFighter/KDevelop/: CamFighter.kdevelop  CamFighter.kdevelop.filelist  CamFighter.kdevelop.pcs  CamFighter.kdevses  Doxyfile
CamFighter/Lua/: LuaDebugger.cpp  LuaDebugger.h  LuaMgr.h  LuaRestoreStack.h  LuaScript.cpp  LuaScript.h  LuaThis.h  LuaVirtualMachine.cpp  LuaVirtualMachine.h  luainc.h
CamFighter/Math/: xColor3b.h  xColor4b.h  xFieldOfView.h  xLight.cpp  xLight.h  xMath.h  xMatrix.cpp  xMatrix.h  xPlane.h  xQuaternion.cpp  xQuaternion.h  xTriangle.h  xVector2.h  xVector3.h  xVector4.h  xVerletConstraint.cpp  xVerletConstraint.h
CamFighter/Models/: Model3dx.cpp  Model3dx.h  ModelMgr.cpp  ModelMgr.h
CamFighter/MotionCapture/: CaptureInput.h
CamFighter/Multiplayer/: NetworkInput.h
CamFighter/OGL/: GLAnimSkeletal.cpp  GLShader.cpp  GLShader.h  ISelectionProvider.cpp  ISelectionProvider.h  Utils.h  ogl.h
CamFighter/OpenGL/: GLAnimSkeletal.cpp  GLAnimSkeletal.h  GLButton.h  GLShader.cpp  GLShader.h  ISelectionProvider.cpp  ISelectionProvider.h  Utils.cpp  Utils.h
CamFighter/Physics/: CD_MeshToMesh.cpp  CD_MeshToMesh.h  CD_RayToMesh.cpp  CD_RayToMesh.h  CollisionDetector.cpp  CollisionDetector.h  CollisionInfo.h  IKEngine.cpp  IKEngine.h  IPhysicalBody.h  PhysicalBody.cpp  PhysicalBody.h  PhysicalFigure.h  PhysicalWorld.cpp  PhysicalWorld.h  RayTrCollisionDetector.cpp  RayTrCollisionDetector.h  RigidBody.cpp  RigidBody.h  SkeletizedBody.cpp  SkeletizedBody.h  VerletBody.cpp  VerletBody.h
CamFighter/Source Files/: ComBoard.cpp  ComBoard.h  InputCodes.h  LightsAndMaterials.cpp  LightsAndMaterials.h  SceneConsole.cpp  SceneConsole.h  SceneGame.cpp  SceneGame.h  SceneMenu.cpp  SceneMenu.h  SceneSkeleton.cpp  SceneSkeleton.h  SceneSkeletonUpd.cpp  SceneTest.cpp  SceneTest.h  main.cpp
CamFighter/SourceFiles/: ComBoard.cpp  ComBoard.h  SceneConsole.cpp  SceneConsole.h  SceneGame.cpp  SceneGame.h  SceneMenu.cpp  SceneMenu.h  SceneSkeleton.cpp  SceneSkeleton.h  SceneSkeletonUpd.cpp  SceneTest.cpp  SceneTest.h  (+1 more)
(+911 files in other folders)
